--- a/public/auth/callback/index.html
+++ b/public/auth/callback/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <title>Redirecting...</title>
     <script>
-      // Sayfa yüklendiğinde deeplink'e yönlendirme yap
       window.onload = () => {
-        const urlParams = new URLSearchParams(window.location.search);
-        const type = urlParams.get("type");
-        const token = urlParams.get("access_token");
+        // search (?), hash (#) parametrelerini birlikte oku
+        const searchParams = new URLSearchParams(window.location.search);
+        const hashParams = new URLSearchParams(window.location.hash.substring(1));
 
+        const type = searchParams.get("type") || hashParams.get("type");
+        const token = searchParams.get("access_token") || hashParams.get("access_token");
+
+        // Deeplink URL'sini oluştur
         let deeplink = "anosocial://auth/callback";
+        if (type) deeplink += `?type=${encodeURIComponent(type)}`;
+        if (token) deeplink += `${type ? "&" : "?"}access_token=${encodeURIComponent(token)}`;
 
-        if (type) {
-          deeplink += `?type=${type}`;
-        }
+        console.log("🔁 Redirecting to:", deeplink);
 
-        if (token) {
-          deeplink += `${type ? "&" : "?"}access_token=${token}`;
-        }
-
+        // Uygulamayı aç
         window.location.replace(deeplink);
       };
     </script>
